WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105533
Font description not synchronized correctly on orientation affecting property changes
https://bugs.webkit.org/show_bug.cgi?id=105533
Summary
Font description not synchronized correctly on orientation affecting property...
Antti Koivisto
Reported
2012-12-20 06:53:20 PST
in StyleResolver checkForOrientationChange() function checks if the new computed orientation differs from the parent orientation and updates the style's font description only if it does. This is not correct as that does not guarantee the new font description is actually up to date. We can leave the function with the computed orientation and the font description out of sync.
Attachments
patch
(3.37 KB, patch)
2012-12-20 07:36 PST
,
Antti Koivisto
enrica
: review+
Details
Formatted Diff
Diff
Another patch
(2.20 KB, patch)
2012-12-20 11:03 PST
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2012-12-20 07:36:12 PST
Created
attachment 180341
[details]
patch
Enrica Casucci
Comment 2
2012-12-20 10:17:12 PST
What I don't understand about your fix is why you've removed the knowledge of the parent style entirely. Is it ok? Would it be better to do something like: if (childFontOrientation == parentFontOrientation && childGlyphOrientation == parentGlyphOrientation && style->fontDescription().orientation() == childFontOrientation) return; It is even a smaller change than yours.
Enrica Casucci
Comment 3
2012-12-20 11:03:57 PST
Created
attachment 180371
[details]
Another patch I'm uploading another patch with a smaller fix.
Enrica Casucci
Comment 4
2012-12-20 11:26:49 PST
I've discussed this with Dan and I'm convinced that Antti's approach is the right thing to do.
Enrica Casucci
Comment 5
2012-12-20 14:08:47 PST
Comment on
attachment 180341
[details]
patch looks good to me. Thanks!
Antti Koivisto
Comment 6
2012-12-20 14:14:53 PST
http://trac.webkit.org/changeset/138299
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug